# silabs-firmware-builder

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  requirements.txt
Yellow_ncp-uart-hw/: .cproject  Yellow_ncp-uart-hw.pintool  Yellow_ncp-uart-hw.slcp  Yellow_ncp-uart-hw.slps  gbl_metadata.yaml
bootloader-uart-xmodem/: .cproject  bootloader-uart-xmodem.pintool  bootloader-uart-xmodem.slcp  bootloader-uart-xmodem.slpb  bootloader-uart-xmodem.slps  gbl_metadata.yaml
manifests/: skyconnect_bootloader-uart-xmodem.yaml  skyconnect_firmware-eraser.yaml  skyconnect_ncp-uart-hw.yaml  skyconnect_ot-rcp.yaml  skyconnect_rcp-uart-802154.yaml  slusb001a-lr2_zwave_ncp_serial_api_controller.yaml  slusb001a-lr_zwave_ncp_serial_api_controller.yaml  slusb001a_zwave_ncp_serial_api_controller.yaml  yellow_bootloader-uart-xmodem.yaml  yellow_ncp-uart-hw.yaml  yellow_ot-rcp.yaml  yellow_rcp-uart-802154.yaml
ncp-uart-hw/: .cproject  ncp-uart-hw.slcp  ncp-uart-hw.slpb  ncp-uart-hw.slps
ot-rcp/: .cproject  gbl_metadata.yaml  ot-rcp.slcp  ot-rcp.slpb
rcp-uart-802154/: .cproject  app.c  gbl_metadata.yaml  rcp-uart-802154.pintool  rcp-uart-802154.slcp  rcp-uart-802154.slpb  rcp-uart-802154.slps
src/ncp-uart-hw/ncp-uart-hw_cmake/: CMakeLists.txt  CMakePresets.json
static/: index.html
tools/: build_firmware.sh  build_project.py  cproject_normalizer.py  create_factory_hex.py  create_gbl.py  create_manifest.py  generate_project.py  generate_web_flasher_webpage.py  normalize_cproject.py
v2024.10.21/: manifest.json  zwave_stick_7.22.2.0.gbl
v2024.8.20/: skyconnect_bootloader-uart-xmodem_2.4.2.gbl  skyconnect_ncp-uart-hw_7.4.4.0.gbl  skyconnect_ot-rcp_2.4.0.0_GitHub-7074a43e4_gsdk_4.4.4.gbl  skyconnect_rcp-uart-802154_gsdk_4.4.4.gbl  slusb001a-lr2_zwave_ncp_serial_api_controller.gbl  slusb001a-lr_zwave_ncp_serial_api_controller.gbl  slusb001a_zwave_ncp_serial_api_controller.gbl  yellow_bootloader-uart-xmodem_2.4.2.gbl  yellow_ncp-uart-hw_7.4.4.0.gbl  yellow_ot-rcp_2.4.0.0_GitHub-7074a43e4_gsdk_4.4.4.gbl  (+1 more)
(+708 files in other folders)
